# gpui-moonbit

./: .gitignore  README.md  build.ps1  build.sh  bundle.sh
.claude/: codex-rules.md  codex-scaffold.sh
.github/workflows/: ci.yml
bindgen-moonbit/: Cargo.toml  README.md
bindgen-moonbit/src/: main.rs
docs/: architecture.md  framework-gaps.md  moonbit-native-notes.md  roadmap.md  troubleshooting.md
docs/reviews/: 2026-07-16-codex-gpt5.6-sol.md
docs/spikes/: 2026-07-24-packaging-feasibility.md
gpui-sys/: .gitignore  Cargo.toml  abi.toml  build.rs  cbindgen.toml
gpui-sys/include/: gpui_sys.h
gpui-sys/src/: abi_constants.rs  lib.rs
moonbit-bindings/: README.mbt.md  abi_constants.mbt  gpui-bindings-ffi.mbt  gpui-bindings.mbt  gpui-bindings_test.mbt  gpui-bindings_wbtest.mbt  moon.mod
moonbit-bindings/.githooks/: README.md
moonbit-bindings/app/: app.mbt  app_wbtest.mbt  moon.pkg
moonbit-bindings/cmd/main/: main.mbt  moon.pkg  moon.pkg.linux  moon.pkg.macos  moon.pkg.windows
moonbit-bindings/cmd/roundtrip/: main.mbt  moon.pkg.linux  moon.pkg.macos  moon.pkg.windows
